# lccap-saas

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  Directory.Build.props  Lccap.sln  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: environment-variables.md  local-development.md  security-notes.md
docs/manual-verification/: phase3-exposure-workflow.md
docs/state/: LCCAP_IMPLEMENTATION_TRACKER.json
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: config.ts  demo-data.ts
frontend/types/: actions.ts  api.ts  audit.ts  common.ts  dashboard.ts  documents.ts  exports.ts  monitoring.ts  plans.ts
python/exposure-computation-service/: README.md  pyproject.toml
python/exposure-computation-service/app/: main.py
python/exposure-computation-service/tests/: test_compute_exposure.py  test_health.py
scripts/: verify-dotnet.ps1  verify-python.ps1
src/Lccap.Api/: Lccap.Api.csproj  Lccap.Api.http  Program.cs  appsettings.Development.json  appsettings.json
src/Lccap.Application/: ApplicationAssemblyMarker.cs  DependencyInjection.cs  Lccap.Application.csproj
src/Lccap.Domain/: DomainAssemblyMarker.cs
src/Lccap.Infrastructure/: DependencyInjection.cs  InfrastructureAssemblyMarker.cs  Lccap.Infrastructure.csproj
tests/Lccap.Api.Tests/: ApiSmokeTests.cs  Lccap.Api.Tests.csproj
tests/Lccap.Application.Tests/: ApplicationSmokeTests.cs  Lccap.Application.Tests.csproj
tests/Lccap.Domain.Tests/: DomainSmokeTests.cs  Lccap.Domain.Tests.csproj
(+361 files in other folders)
